<resources>
    <string name="app_name">Collections and Maps</string>
    <string name="collections">Collections</string>
    <string name="maps">Maps</string>
    <string name="collections_and_maps">Collections and Maps</string>
    <string name="elements">Elements</string>
    <string name="threads">Threads</string>
    <string name="default_time">N/A ms</string>
    <string name="enter_elements_amount">Enter elements amount</string>
    <string name="enter_threads_amount">Enter threads amount</string>
    <string name="start">start</string>
    <string name="elements_empty">Amount of elements must not be empty</string>
    <string name="elements_zero">Amount of elements must not be zero</string>
    <string name="threads_empty">Amount of threads must not be empty</string>
    <string name="threads_zero">Amount of threads must not be zero</string>
    <string name="stop">stop</string>
    <string name="result">%1$g ms</string>
    <string name="name_of_collections_or_maps">%1$s %2$s</string>
    <string name="calculation_is_finished">Calculation is finished</string>
    <string name="calculation_is_stopped">Calculation is stopped</string>

    <string name="array_list">ArrayList</string>
    <string name="linked_list">LinkedList</string>
    <string name="copy_on_write_array_list">CopyOnWriteArrayList</string>

    <string name="adding_to_beginning">Adding to start in</string>
    <string name="adding_to_middle">Adding to middle in</string>
    <string name="adding_to_end">Adding to end in</string>
    <string name="search_in_list">Search in</string>
    <string name="removing_from_start">Removing from start in</string>
    <string name="removing_from_middle">Removing from middle in</string>
    <string name="removing_from_end">Removing from end in</string>

    <string name="tree_map">TreeMap</string>
    <string name="hash_map">HashMap</string>

    <string name="adding_to_Map">Adding to</string>
    <string name="search_in_Map">Search in</string>
    <string name="removing_from_Map">Removing from</string>


    <string-array name="tab_title">
        <item>@string/collections</item>
        <item>@string/maps</item>
    </string-array>

    <string-array name="names_collections_list">
        <item>Adding to start in ArrayList</item>
        <item>Adding to start in LinkedList</item>
        <item>Adding to start in CopyOnWriteArrayList</item>
        <item>Adding to middle in ArrayList</item>
        <item>Adding to middle in LinkedList</item>
        <item>Adding to middle in CopyOnWriteArrayList</item>
        <item>Adding to end in ArrayList</item>
        <item>Adding to end in LinkedList</item>
        <item>Adding to end in CopyOnWriteArrayList</item>
        <item>Search in ArrayList</item>
        <item>Search in LinkedList</item>
        <item>Search in CopyOnWriteArrayList</item>
        <item>Removing from start in ArrayList</item>
        <item>Removing from start in LinkedList</item>
        <item>Removing from start in CopyOnWriteArrayList</item>
        <item>Removing from middle in ArrayList</item>
        <item>Removing from middle in LinkedList</item>
        <item>Removing from middle in CopyOnWriteArrayList</item>
        <item>Removing from end in ArrayList</item>
        <item>Removing from end in LinkedList</item>
        <item>Removing from end in CopyOnWriteArrayList</item>
    </string-array>

    <string-array name="names_maps_list">
        <item>Adding to HashMap</item>
        <item>Adding to TreeMap</item>
        <item>Search in HashMap</item>
        <item>Search in TreeMap</item>
        <item>Removing from HashMap</item>
        <item>Removing from TreeMap</item>
    </string-array>


</resources>