<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/text_view_elements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elements"
        android:textSize="14sp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_elements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_view_threads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/threads"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_threads"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_elements" />

    <EditText
        android:id="@+id/edit_text_elements"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/enter_elements_amount"
        android:inputType="number"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/start_button"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_threads"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_threads_amount"
        android:inputType="number"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/start_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_elements" />

    <ToggleButton
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:textOff="@string/start"
        android:textOn="@string/stop"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_threads"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/item_collections_and_maps" />


</androidx.constraintlayout.widget.ConstraintLayout>